# Copyright (c) 2025-2026, The Shekyl Foundation
#
# All rights reserved.
# BSD-3-Clause

[package]
name = "shekyl-wallet-prefs"
description = "Plaintext-with-HMAC user preferences (Layer 2 of docs/WALLET_PREFS.md): strict TOML schema, HMAC-SHA256 integrity over file bytes, atomic writes, and quarantine-on-tamper semantics."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# TOML parser; `deny_unknown_fields` at the serde level rejects any
# name we have not whitelisted, and the per-field rejection messages
# for Bucket-3 collisions are routed through our own Error type
# before that catch-all fires.
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }

# HMAC-SHA256 for file-integrity protection. The key is derived from
# `file_kek` + `expected_classical_address` so tampering while the
# wallet is locked is detected on the next open (WALLET_PREFS.md §2.2).
hmac = "0.12"
sha2 = "0.10"

# HKDF-Expand for the prefs HMAC-key derivation. Same crate already
# in use across shekyl-crypto-pq, so no new transitive dependency.
hkdf = "0.12"

# Strict-typed errors. `thiserror` lets each Bucket-3 collision carry
# its own variant so the diagnostic message (documentation-as-error,
# per rule 82-failure-mode-ux.mdc) is part of the type.
thiserror.workspace = true

# Zeroize HMAC key material on drop.
zeroize = { version = "^1.5", features = ["zeroize_derive"] }

# Structured warnings on tamper / quarantine events.
tracing = "0.1"

# Atomic-write temp-file guard; same crate used by shekyl-wallet-file
# so the on-disk behavior (sibling temp + random suffix + O_CREAT|O_EXCL)
# is identical between `.wallet` saves and `.prefs.toml` saves.
tempfile = "3"

# Directory-fsync portability shim; POSIX only.
rustix = { version = "1", features = ["fs"] }

# Serde is used for the schema types in the prefs body. Kept feature-
# gated to avoid pulling macros into consumers that only need
# load/save by bytes.
serde = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
